--- a/example.html
+++ b/example.html
@@ -2,18 +2,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leaflet Quick Start Guide Example</title>
+	<title>Leaflet with GeoJSON</title>
 	<meta charset="utf-8" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="css/leaflet.css" />
+
+
 </head>
+
+
 <body>
 	<div id="map" style="width: 600px; height: 400px"></div>
 
+	<script src="places.geojson" type="text/javascript"></script>
+
 	<script src="js/leaflet.js"></script>
+	<script src="js/jquery-2.1.3.min.js"></script>
 	<script>
+
+
 
 		var map = L.map('map').setView([47.6, -122], 8);
 
@@ -25,7 +34,8 @@
 			id: 'examples.map-i875mjb7'
 		}).addTo(map);
 
-
+		/* Load points GeoJSON and add to map */
+		L.geoJson(place).addTo(map);
 
 	</script>
 </body>
