--- a/example.html
+++ b/example.html
@@ -14,7 +14,7 @@
 
 
 <body>
-	<div id="map" style="width: 600px; height: 400px"></div>
+	<div id="map" style="width: 800px; height: 600px"></div>
 
 	<script src="places.geojson" type="text/javascript"></script>
 
@@ -24,7 +24,7 @@
 
 
 
-		var map = L.map('map').setView([47.6, -122], 8);
+		var map = L.map('map').setView([39.83, -98.58], 4);
 
 		L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
 			maxZoom: 18,
@@ -34,8 +34,39 @@
 			id: 'examples.map-i875mjb7'
 		}).addTo(map);
 
-		/* Load points GeoJSON and add to map */
-		L.geoJson(place).addTo(map);
+		/* popup content */
+
+		function onEachFeature(feature, layer) {
+			var popupContent = feature.properties.Town;
+
+			if (feature.properties && feature.properties.popupContent) {
+				popupContent += feature.properties.popupContent;
+			}
+
+			layer.bindPopup(popupContent);
+		}
+
+
+				L.geoJson(place, {
+
+			style: function (feature) {
+				return feature.properties && feature.properties.style;
+			},
+
+			onEachFeature: onEachFeature,
+
+			pointToLayer: function (feature, latlng) {
+				return L.circleMarker(latlng, {
+					radius: 8,
+					fillColor: "#ff7800",
+					color: "#000",
+					weight: 1,
+					opacity: 1,
+					fillOpacity: 0.8
+				});
+			}
+		}).addTo(map);
+
 
 	</script>
 </body>
