--- a/example.html
+++ b/example.html
@@ -58,11 +58,11 @@
 			pointToLayer: function (feature, latlng) {
 				return L.circleMarker(latlng, {
 					radius: 8,
-					fillColor: "#ff7800",
+					fillColor: "#0000ff",
 					color: "#000",
 					weight: 1,
 					opacity: 1,
-					fillOpacity: 0.8
+					fillOpacity: 0.4
 				});
 			}
 		}).addTo(map);
